--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "description": "API server",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -15,10 +16,13 @@
     "dependencies": "^0.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "http-errors": "^1.7.2",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.2.5",
+    "nodemon": "^2.0.11",
     "npm-install-missing": "^0.1.4",
-    "pg": "^8.6.0"
+    "pg": "^8.6.0",
+    "validator": "^13.6.0"
   }
 }
