--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "jest": "jest",
+    "test": "NODE_ENV=test mocha"
   },
   "author": "",
   "license": "ISC",
@@ -20,9 +21,17 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.2.5",
-    "nodemon": "^2.0.11",
     "npm-install-missing": "^0.1.4",
     "pg": "^8.6.0",
     "validator": "^13.6.0"
+  },
+  "devDependencies": {
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
+    "eslint": "^7.31.0",
+    "jest": "^27.0.6",
+    "mocha": "^9.0.3",
+    "nodemon": "^2.0.12",
+    "supertest": "^6.1.4"
   }
 }
